--- a/style.css
+++ b/style.css
@@ -23,3 +23,25 @@ body {
     pointer-events: none;
     z-index: 2;
 }
+
+#form-container {
+    position: absolute;
+    height: 15%;
+    width: 15%;
+    left: 2%;
+    top: 2%;
+    border-radius: 1rem;
+    background-color: rgba(141, 127, 50, 0.74);
+}
+
+#container-label {
+    text-align: center;
+    font-size: 20px;
+    padding-top: 5px;
+    font-weight: bold;
+}
+
+#form {
+    padding-left: 10px;
+    padding-top: 10px;
+}
