--- a/style.css
+++ b/style.css
@@ -30,8 +30,9 @@ body {
     width: 15%;
     left: 2%;
     top: 2%;
+    z-index: 10;
     border-radius: 1rem;
-    background-color: rgba(141, 127, 50, 0.74);
+    background-color: rgb(141, 127, 50);
 }
 
 #container-label {
@@ -44,4 +45,15 @@ body {
 #form {
     padding-left: 10px;
     padding-top: 10px;
+}
+
+#stage {
+    position: absolute;
+    border: 2px solid black;
+    height: 75%;
+    width: 75%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
