--- a/style.css
+++ b/style.css
@@ -42,6 +42,14 @@ body {
     font-weight: bold;
 }
 
+#left-float {
+    float: left;
+}
+
+#right-float {
+    float: right;
+}
+
 #form {
     padding-left: 10px;
     padding-top: 10px;
